--- a/doc/任务脚本制作.md
+++ b/doc/任务脚本制作.md
@@ -1,2 +1,15 @@
 任务脚本目录
-    scripts/quest/*.js
+
+ ```
+  scripts/quest/*.js
+```
+
+ NPC功能制作
+ 
+```
+# 扣血(魔)
+qm.setHP(-25);
+
+# 设置血(魔)量
+  qm.getPlayer().updateSingleStat(MapleStat.HP, 25);
+```   
